--- a/TRNG Machine/platformio.ini
+++ b/TRNG Machine/platformio.ini
@@ -19,3 +19,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.10.5
 	adafruit/Adafruit SSD1306@^2.4.3
 	adafruit/Adafruit BusIO@^1.7.2
+
+; COM1 or COM3
+;upload_port = COM[13]
+upload_port = COM[8]
